# gpt-drf-wraper

./: .test.env  README.md  pyproject.toml
src/: ai.py  scripts.py  settings.py  urls.py
src/api/: _signals.py  admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_alter_conversation_options_alter_message_options_and_more.py  0003_alter_message_role.py
src/authentication/: admin.py  models.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0001_initial.py
tests/: test_user.py
